build(deps): add ava for testing

--- a/package.json
+++ b/package.json
@@ -39,15 +39,21 @@
     "lint": "tsc --noEmit && eslint --ext .js,.ts --ignore-path .gitignore",
     "prepare": "husky install && pnpm build",
     "release": "standard-version -s",
+    "test": "ava",
+    "test:watch": "ava --watch",
     "watch": "pnpm tsc --watch --sourceMap"
   },
   "devDependencies": {
+    "@ava/typescript": "^3.0.1",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@commitlint/types": "^17.0.0",
     "@types/node": "^18.6.2",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "ava": "^4.3.1",
+    "esbuild-node-loader": "^0.8.0",
     "eslint": "^8.20.0",
+    "eslint-plugin-ava": "^13.2.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
