--- a/package.json
+++ b/package.json
@@ -23,17 +23,15 @@
     "traverse"
   ],
   "type": "module",
-  "exports": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "main": "dist/walk-dir.js",
+  "module": "dist/walk-dir.mjs",
+  "types": "dist/walk-dir.d.ts",
   "packageManager": "pnpm@7.5.1",
   "engines": {
     "node": ">= 14.17"
   },
   "scripts": {
-    "build": "pnpm clean && pnpm tsc --build",
+    "build": "pnpm clean && rollup --config rollup.config.ts --configPlugin rollup-plugin-esbuild",
     "clean": "rm -rf ./dist",
     "fix": "eslint --fix --ext .js,.ts --ignore-path .gitignore",
     "lint": "tsc --noEmit && eslint --ext .js,.ts --ignore-path .gitignore",
@@ -43,7 +41,7 @@
     "test:fixtures:clean": "sh bin/remove-test-fixtures.sh",
     "test:fixtures:prepare": "sh bin/create-test-fixtures.sh",
     "test:watch": "ava --watch",
-    "watch": "pnpm tsc --watch --sourceMap"
+    "watch": "rollup --config rollup.config.ts --configPlugin rollup-plugin-esbuild --watch"
   },
   "devDependencies": {
     "@ava/typescript": "^3.0.1",
@@ -53,12 +51,16 @@
     "@types/node": "^18.6.3",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "ava": "^4.3.1",
+    "esbuild": "^0.14.53",
     "esbuild-node-loader": "^0.8.0",
     "eslint": "^8.21.0",
     "eslint-plugin-ava": "^13.2.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
+    "rollup": "^2.77.2",
+    "rollup-plugin-dts": "^4.2.2",
+    "rollup-plugin-esbuild": "^4.9.1",
     "standard-version": "^9.5.0",
     "typescript": "^4.7.4"
   }
