--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     /* Projects */
     "incremental": true,
+    "tsBuildInfoFile": ".tsbuildinfo",
     /* Language and Environment */
     "lib": ["dom", "dom.iterable", "esnext"],
     "target": "esnext",
