build: add files and exports properties to publish package
By mistake I removed it when configure the bundle with Rollup
(9d5f2fd3cc095f69ebec439eea6e1c25837d880f), so I add it again to only
publish dist folder.
I also added the exports properties to use the correct file depending
on context.

--- a/package.json
+++ b/package.json
@@ -23,9 +23,18 @@
     "traverse"
   ],
   "type": "module",
+  "files": [
+    "dist/**"
+  ],
   "main": "dist/walk-dir.js",
   "module": "dist/walk-dir.mjs",
   "types": "dist/walk-dir.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/walk-dir.js",
+      "import": "./dist/walk-dir.mjs"
+    }
+  },
   "packageManager": "pnpm@7.5.1",
   "engines": {
     "node": ">= 14.17"
