fix: change extension of commonJS bundle and fix rollup exports config
Without `cjs` extension, Node was treating `js` file as a module
because of `type: "module"` in package.json file.
Also, the `exports: 'default'` was wrong for CommonJS: there is no
default property. We can require digDir directly.

--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
   "files": [
     "dist/**"
   ],
-  "main": "dist/dig-dir.js",
+  "main": "dist/dig-dir.cjs",
   "module": "dist/dig-dir.mjs",
   "types": "dist/dig-dir.d.ts",
   "exports": {
     ".": {
-      "require": "./dist/dig-dir.js",
+      "require": "./dist/dig-dir.cjs",
       "import": "./dist/dig-dir.mjs"
     }
   },
